# bcs

./: CHANGELOG.md  Cargo.toml  crates.js  help.html  rustfmt.toml  settings.html  src-files.js
.github/workflows/: ci.yml  rustdoc.yml
bcs/: Cargo.toml
bcs-derive/: Cargo.toml  README.md
bcs-derive/src/: lib.rs
bcs/benches/: bcs_bench.rs
bcs/src/: de.rs  lib.rs
bcs_derive/: all.html  derive.Bcs.html  derive.BcsDeserialize.html  derive.BcsSerialize.html  index.html  sidebar-items.js
benches/: bcs_bench.rs
calabi_bcs/: all.html  constant.MAX_CONTAINER_DEPTH.html  constant.MAX_SEQUENCE_LENGTH.html  derive.Bcs.html  derive.BcsDeserialize.html  derive.BcsSerialize.html  enum.Error.html  fn.from_bytes.html  fn.from_bytes_seed.html  fn.from_bytes_seed_with_limit.html  fn.from_bytes_with_limit.html  fn.is_human_readable.html  fn.serialize_into.html  fn.serialize_into_with_limit.html  fn.serialized_size.html  fn.serialized_size_with_limit.html  fn.to_bytes.html  fn.to_bytes_with_capacity.html  fn.to_bytes_with_limit.html  index.html  sidebar-items.js  trait.TBCSDeserialize.html  trait.TBCSDeserializeOwned.html  trait.TBCSSerialize.html  type.Result.html
calabi_bcs/de/: fn.from_bytes.html  fn.from_bytes_seed.html  fn.from_bytes_seed_with_limit.html  fn.from_bytes_with_limit.html
calabi_bcs/error/: enum.Error.html  type.Result.html
calabi_bcs/ser/: fn.is_human_readable.html  fn.serialize_into.html  fn.serialize_into_with_limit.html  fn.serialized_size.html  fn.serialized_size_with_limit.html  fn.to_bytes.html  fn.to_bytes_with_capacity.html  fn.to_bytes_with_limit.html
calabi_bcs/test_helpers/: index.html  (+1 more)
search.index/: 0d81333be4.js  0dd767c734.js  1360c7d2fc.js  3ab04b7703.js  426a467739.js  4600579a54.js  470d178bee.js  5ef36b9c13.js  639bf7754a.js  66f6e0657f.js  7cee9f7557.js  root.js
src/: de.rs  error.rs  lib.rs  ser.rs  std_impls.rs  test_helpers.rs  traits.rs
tests/: serde.rs
(+38 files in other folders)
