[package]
name = "calabi-bcs"
version = "0.1.4"
authors = ["Diem <opensource@diem.com>"]
description = "Binary Canonical Serialization (BCS)"
repository = "https://github.com/diem/bcs"
homepage = "https://diem.com"
readme = "README.md"
license = "Apache-2.0"
edition = "2018"

[dependencies]
thiserror = "1.0.22"
serde = { version = "1.0.117", features = ["derive"] }

[dev-dependencies]
criterion = "0.3.3"
proptest = "0.10.1"
proptest-derive = "0.2.0"

[[bench]]
name = "bcs_bench"
harness = false

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# These casts are intentional for binary serialization
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
